Bug 67700 - leaks memory
Summary: leaks memory
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-03 08:22 UTC by Pavel Vasin
Modified: 2013-08-08 15:27 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
user: Really don't leak login_history (812 bytes, patch)
2013-08-03 08:23 UTC, Pavel Vasin
Details | Splinter Review
daemon: Don't leak struct UserPreviousLogin (1.92 KB, patch)
2013-08-03 08:23 UTC, Pavel Vasin
Details | Splinter Review
daemon: Don't leak struct UserPreviousLogin v2 (2.19 KB, patch)
2013-08-08 14:46 UTC, Pavel Vasin
Details | Splinter Review

Description Pavel Vasin 2013-08-03 08:22:18 UTC
see patches
Comment 1 Pavel Vasin 2013-08-03 08:23:23 UTC
Created attachment 83567 [details] [review]
user: Really don't leak login_history
Comment 2 Pavel Vasin 2013-08-03 08:23:49 UTC
Created attachment 83568 [details] [review]
daemon: Don't leak struct UserPreviousLogin
Comment 3 Stef Walter 2013-08-08 13:52:46 UTC
Attachment 83567 [details] pushed as d440985 - user: Really don't leak login_history

Thanks, this patch looks good.
Comment 4 Stef Walter 2013-08-08 13:56:31 UTC
Comment on attachment 83568 [details] [review]
daemon: Don't leak struct UserPreviousLogin

Review of attachment 83568 [details] [review]:
-----------------------------------------------------------------

Would prefer something like this instead:

- g_list_free (accounting->previous_logins);
+ g_list_free_full (accounting->previous_logins, user_previous_login_free);

Are you able to make this change? If not let me know.
Comment 5 Pavel Vasin 2013-08-08 14:46:24 UTC
Created attachment 83840 [details] [review]
daemon: Don't leak struct UserPreviousLogin v2

with g_list_free_full
Comment 6 Stef Walter 2013-08-08 15:27:57 UTC
Thanks. Pushed the second patch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.