user: Really don't leak login_history

https://bugs.freedesktop.org/show_bug.cgi?id=67700